# DVPQC-V2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lab1-gaussian-sampler-weakness/: CMakeLists.txt  README.md
lab1-gaussian-sampler-weakness/include/: FalconEngine.hpp  GaussianSampler.hpp  TelemetrySession.hpp
lab1-gaussian-sampler-weakness/src/: FalconEngine.cpp  GaussianSampler.cpp  TelemetrySession.cpp  main.cpp
lab10-falling-leaves/: Makefile  README.md  doc.md
lab10-falling-leaves/data/keys/: sphincs.pk  sphincs.sk
lab10-falling-leaves/include/: lab10.h
lab10-falling-leaves/src/: key_store.c  main.c  service.c  sphincs_wrapper.c  tree_monitor.c
lab11-rootless/: Makefile  README.md  sphincs.pk  sphincs.sk
lab11-rootless/include/: lab11.h  liboqs_shim.h
lab11-rootless/src/: main.cpp  oqs_cpp.cpp
lab11-rootless/src/pqclean/: sign.c
lab12-quantum-mirage/: README.md  go.mod
lab12-quantum-mirage/cmd/client/: main.go
lab12-quantum-mirage/cmd/server/: main.go
lab12-quantum-mirage/internal/crypto/: hybrid.go
lab12-quantum-mirage/internal/protocol/: handshake.go
lab13-phase-collapse/: README.md
lab13-phase-collapse/include/: common.h
lab13-phase-collapse/src/: kdf.c  kem.c  main.c  sign.c
lab2-falcon-float-leak/: CMakeLists.txt  README.md
lab2-falcon-float-leak/include/: DriftCorrector.hpp  FalconCore.hpp  UniversalConstants.hpp
lab2-falcon-float-leak/src/: DriftCorrector.cpp  FalconCore.cpp  UniversalConstants.cpp  main.cpp
lab3-falcon-go-zerotrace/: README.md  firewall  go.mod
lab3-falcon-go-zerotrace/cmd/firewall/: main.go
lab3-falcon-go-zerotrace/internal/falconreal/: cgo.go  falcon.go
lab3-falcon-go-zerotrace/internal/sigcheck/: extra.go  verifier.go
lab3-falcon-go-zerotrace/pkg/config/: config.go
lab3-falcon-go-zerotrace/pkg/temporal/: temporal.go
lab4-frozen-lattice/: Makefile  README.md
lab4-frozen-lattice/config/: shield_params.conf
lab4-frozen-lattice/include/: cryo_shield.h  reactor_core.h  telemetry.h
lab4-frozen-lattice/src/: cryo_shield.c  keygen.c  main_controller.c  reactor_core.c  telemetry.c
lab5-kyber-crystal-echo/: Makefile  README.md  doc.md  requirements.txt
lab5-kyber-crystal-echo/docs/: ARCHITECTURE.md
lab5-kyber-crystal-echo/fuzzing/: README_FUZZING.md  generate_seeds.py
lab5-kyber-crystal-echo/fuzzing/corpus/seed_ciphertexts/: README.txt
lab5-kyber-crystal-echo/fuzzing/dictionaries/: kyber_tokens.dict
lab5-kyber-crystal-echo/fuzzing/harness/: differential_fuzz.py  fuzz_ciphertext.py  fuzz_decaps.py
lab5-kyber-crystal-echo/include/: constants.py
lab5-kyber-crystal-echo/src/: __init__.py  crystal_kem.py  echo_chamber.py  fo_transform.py  key_store.py  protocol_handler.py
lab5-kyber-crystal-echo/tests/: test_basic.py  test_compliance.py  test_edge_cases.py
lab6-entropy-collapse/: CMakeLists.txt  Makefile  README.md  build.bat  build_log.txt  doc.md
lab6-entropy-collapse/include/: EntropyPool.h  KyberManager.h  Transceiver.h
lab6-entropy-collapse/src/: main.cpp
lab6-entropy-collapse/src/Crypto/: KyberManager.cpp
lab6-entropy-collapse/src/Radio/: Transceiver.cpp
lab6-entropy-collapse/src/Utils/: EntropyPool.cpp
lab7-fractured-keyspace/: Cargo.toml  README.md  doc.md
lab7-fractured-keyspace/src/: lib.rs  main.rs
lab7-fractured-keyspace/src/modules/: access_control.rs  comms.rs  dimensional_rift.rs  fractured_keys.rs  key_management.rs
lab8-temporal-fork/: CMakeLists.txt  Makefile  README.md  build_fast_fuzz.bat  build_lab8.bat  doc.md
lab8-temporal-fork/include/: lab8.h
lab8-temporal-fork/src/: dilithium_wrapper.c  main.c  verifier.c
lab8-temporal-fork/src/core/: security_controller.c
lab8-temporal-fork/src/hal/: glitch_controller.h
lab8-temporal-fork/src/math/: ntt_accel.c
lab8-temporal-fork/src/phys/: power_profile.c
lab9-silent-vector/: README.md  doc.md  requirements.txt
lab9-silent-vector/data/keys/: dk3-59b53c1c-0001.json
lab9-silent-vector/data/telemetry/: session_18784f66.jsonl
lab9-silent-vector/include/: constants.py
lab9-silent-vector/src/: __init__.py  dilithium_signer.py  key_manager.py  protocol.py  signature_engine.py  telemetry.py
