[package]
name = "lab7-fractured-keyspace"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3.5"
rand = "0.8"
hex = "0.4"
colored = "2.0"
sha3 = "0.10"

[[bin]]
name = "lab7"
path = "src/main.rs"

[[bin]]
name = "exploit_stub"
path = "exploits/find_collision.rs"

[[bin]]
name = "solution"
path = "solutions/solve_collision.rs"
